# app/Http/Requests/Admin/StoreUserRequest.php
@@ -23,6 +23,7 @@ class StoreUserRequest extends FormRequest
                 ? ['client', 'prestataire', 'admin', 'superadmin']
                 : ['client', 'prestataire', 'admin'])],
             'bio' => ['nullable', 'string', 'max:2000'],
+            'hourly_rate' => ['nullable', 'required_if:role,prestataire', 'numeric', 'min:0', 'max:99999999.99'],
             'password' => ['required', 'string', 'min:8', 'confirmed'],
             'verified' => ['required', 'boolean'],
         ];
